# kitsem2

./: .gitignore
arena/: main.c
kadai/: CMakeLists.txt  run
kadai/src/: defines.h  main.c
kadai/src/application/: student.h
kadai/src/core/: bst.c  bst.h  dynamic_array.c  dynamic_array.h  file.c  file.h  linked_list.c  linked_list.h  memory.h
kadai/src/core/memory/: arena_allocator.c  arena_allocator.h  crt_allocator.c  crt_allocator.h
kadai10/: kadai10.c  kadai10_2  kadai10_3  kadai10_4  run_all.sh
kadai10a/: gendata.c  kadai10.c  kadai7.c  run_all.sh
kadai10a/notes/: kadai10a_3  kadai10a_4  kadai10a_5
kadai11/: kadai11.c  kadai11_3  output  run
kadai12/: kadai12.c  kadai12_3  output  run
kadai13/: _kadai12_timed.c  _kadai9_timed.c  kadai13_3  kadai13_4  run_all.sh
kadai14/: english.c  japanese.c  kadai14_notes  main.c  run  whatday.h
kadai3/: kadai3.c  kadai3_2  kadai3_3  kadai3_4  run
kadai4/: kadai4.c  kadai4_2  kadai4_3  run
kadai5/: kadai5_2  kadai5_3  kadai5_4  main.c  run
kadai6/: input  kadai6.c  kadai6_2  kadai6_3  kadai6_4  output  run
kadai7/: kadai7.c  kadai7_2  kadai7_3  output  run
kadai8/: input  kadai8.c  kadai8_3  run
kadai9/: input  kadai9.c  kadai9_2  kadai9_3  output  run
obfusc/: akutan  akutan.c  run
sandbox/: main.c  run
